fixed hand's overflow

--- a/site/css/index.css
+++ b/site/css/index.css
@@ -122,7 +122,6 @@ body {
 }
 
 #sfondo {
-    overflow-x: hidden;
     max-width: 100vw;
     background-color: rgba(28, 24, 55, 0.3); /*dark slate blue con trasparenza*/
     background-image: url("../file/img/column.png"), url("../file/img/column_F.png"); /*../ torna alla cartella precedente*/
